--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>System statistics information</title>
-    <link rel="stylesheet" type="text/css" href="style.css"></link>
+    <link rel="stylesheet" type="text/css" href="/style.css"></link>
   </head>
   <body>
     <h1>System stats</h1>
